# Catkin_run_Robotic

./: README.md
amr_robots_description/gazebo/: example-world.launch:Zone.Identifier:Zone.Identifier
amr_robots_description/launch/: rqt_topics_services.perspective:Zone.Identifier
axis_camera/: CMakeLists.txt  package.xml
axis_camera/launch/: camera.launch
axis_camera/src/: camera_node.py
p3at_agents/: package.xml
p3at_agents/src/: move_actor.py  seguidor.py
p3at_control/: CMakeLists.txt  package.xml
p3at_control/config/: p3at_control.yaml
p3at_control/launch/: p3at_control.launch
p3at_control/src/: cam_controller.cpp  control_atrator.py  control_test.py  dqn_tf.py  dqn_train_cam.py  quaternion.py  rotate_controller.py  speed_controller.py  teleop.cpp  teleop.py  teleop_p3at.cpp  world_system_teleop.py
p3at_control/src/gym-pancam/: setup.py
p3at_control/src/gym-pancam/gym_pancam/: __init__.py
p3at_control/src/gym-pancam/gym_pancam.egg-info/: PKG-INFO  SOURCES.txt
p3at_control/src/gym-pancam/gym_pancam/envs/: __init__.py  pancam_env.py
p3at_control/src/tensorboard/[DQN]-p3at-v0-13_12_2022_13_45/: events.out.tfevents.1670953513.WP3-ICET-2-IoT.29868.210.v2
p3at_description/: CMakeLists.txt  package.xml
p3at_description/launch/: p3at_rviz.launch
p3at_description/urdf/: p3at.gazebo  p3at.xacro
p3at_gazebo/: CMakeLists.txt  package.xml
p3at_gazebo/launch/: p3at_box.launch  p3at_box_rosaria.launch  p3at_circuit1.launch  p3at_circuit1v3.launch  p3at_circuit2.launch  p3at_circuit25.1.launch  p3at_circuit3.launch  p3at_exp_01.launch  p3at_exp_02.launch  p3at_exp_03.launch  p3at_exp_04.launch  p3at_exp_05.launch  p3at_exp_person.launch  p3at_maze1.launch  p3at_motion1.launch  p3at_motion2.launch  p3at_motion3.launch  p3at_motion4.launch  p3at_motion5.launch  p3at_motionS.launch  p3at_real.launch  sql_bd_aacc.txt
p3at_gazebo/plugins/: atorPlugin.cpp
p3at_gazebo/scripts/: path_publisher.py
p3at_gazebo/src/: gazebo_ros_actor_command_plugin.cpp
p3at_gazebo/worlds/: ator.world  move_actor.world  p3at_box.world  p3at_circuit1v2.world  p3at_circuit1v3.world  p3at_circuit2.world  p3at_circuit25.1.world  p3at_circuit3.world  p3at_exp_01.world  p3at_exp_02.world  p3at_exp_03.world  p3at_exp_04.world  p3at_exp_05.world  p3at_exp_test.world  p3at_maze1.world  p3at_motion1.world  p3at_motion2.world  p3at_motion3.world  p3at_motion4.world  p3at_motionS.world  person2.world  razor.mesh:Zone.Identifier  walk.world
p3at_gazebo/worlds/Circuit1v2/: model.config  model.sdf
p3at_gazebo/worlds/Circuite2/: model.config  model.sdf
p3at_gazebo/worlds/Maze1/: model.sdf
p3at_gazebo/worlds/Motion1/: model.config  model.sdf
p3at_gazebo/worlds/Motion2/: model.config  model.sdf
p3at_gazebo/worlds/Motion2v2/: model.config  model.sdf
p3at_gazebo/worlds/Motion2v3/: model.config  model.sdf
p3at_gazebo/worlds/Motion3/: model.config  model.sdf
p3at_gazebo/worlds/Motion4/: model.config  model.sdf
p3at_gazebo/worlds/MotionS/: model.config  model.sdf
p3at_gazebo/worlds/box/: model.sdf
p3at_gazebo/worlds/circuit1v3/: model.config  model.sdf
p3at_gazebo/worlds/circuit3/: model.config  model.config:Zone.Identifier  model.sdf
p3at_gazebo/worlds/circuit_25.1/: model.config  model.sdf
p3at_gazebo/worlds/exp_01/: model.config  model.sdf
p3at_gazebo/worlds/exp_02/: model.config  model.sdf
p3at_gazebo/worlds/exp_03/: model.sdf
p3at_gazebo/worlds/exp_03/exp_03/: model.config  model.sdf
p3at_gazebo/worlds/exp_05/: model.config  model.sdf
p3at_gazebo/worlds/person_walking/meshes/: walking.dae:Zone.Identifier
pionner_control/: CMakeLists.txt
pionner_control/launch/: control.launch  (+1 more)
rl_agent/: package.xml
(+15 files in other folders)
